# itmo-2019

./: .gitignore  .travis.yml  CONTRIBUTING.md  Makefile  README.md  dangerfile.ts  final_exam.md  package-lock.json  package.json  pyproject.toml  setup.cfg
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build.yml  comments.yml  pythonapp.yml  rebase.yml  review.yml
homework/: 1.md  2.md  3.md  4.md  5.md  7.md  appsconf.md
itmo/second/: cats_composition.py  cats_direct.py
practice/: first.md  first.txt  first_practice.py
practice/1/: first.py
practice/2/: maybe_srp.py  practice.md
practice/2/dependency_inversion/: dependency_inversion.py  test_dependency_inversion.py
practice/2/to_be_mocked/: test_to_be_mocked.py  to_be_mocked.py
students/lerastromtsova/3/: cli.py  conftest.py  constants.py  setups.py  test_cli.py
students/lishanda/3/: cli.py  conftest.py  constants.py  test_contains_lishanda.py  test_ls_lishanda.py  test_mk_lishanda.py  test_rm_lishanda.py  test_since_lishanda.py  test_subprocess_lishanda.py
students/revyakinpetr/2/: decision.md  test_cats_composition.py  test_cats_direct.py
students/revyakinpetr/3/: cli.py  conftest.py  test_cli.py
students/sobolevn/1/: runtests.py
