[tool.poetry]
name = "itmo"
version = "0.1.0"
description = ""
authors = ["sobolevn <mail@sobolevn.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.12.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
