[tool.poetry]
name = "itmo"
version = "0.1.0"
description = ""
authors = ["sobolevn <mail@sobolevn.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.12.5"
safety = "^1.8"
pytest = "^5.1"
pytest-randomly = "^3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
